# facebook-wedge100-ucl

./: README.md  install.sh  pyproject.toml
db/: schema.sql
scripts/: shutdown.py  startup.py  wedge100-led.service  wedge100-nos.service
snmp_agents/: fan_speed.py  port_counters.py  port_status.py  psu_status.py  snmpd_wedge100.conf  temperature.py
webui/: index.php  wedge100-nos.conf
webui/api/: api.php
webui/includes/: db.php
wedge100/: __init__.py  config.py
wedge100/bcm/: sdk.py  soc_commands.py
wedge100/cli/: main.py
wedge100/daemons/: led_daemon.py
wedge100/managers/: bgp.py  hw.py  led.py  lldp.py  mirror.py  port.py  vlan.py
