[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wedge100-nos"
version = "0.1.0"
description = "Accton Wedge 100 홈랩용 NOS (BCM Tomahawk, 32x100G)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.0",
]

[project.scripts]
wedge = "wedge100.cli.main:wedge"

[tool.setuptools.packages.find]
where = ["."]
include = ["wedge100*"]
